--- a/resources/views/livewire/.env
+++ b/resources/views/livewire/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:fp0fo3GzAxFpRCWv8C6hsCin80rnleQZFJicdFu08nw=
 APP_DEBUG=true
-APP_URL=https://www.guteDokumente.de
+APP_URL=http://bewerbung.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
